# flutter_audio_desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.dart  pubspec.yaml
audioplayer/: audio.cpp  audioplayer.hpp  main.cpp
audioplayer/internal/: audiodevices.hpp  callbacks.hpp
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc
example/windows/runner/: main.cpp
lib/: flutter_audio_desktop.dart
lib/source/: main.dart
lib/source/core/: audioevents.dart  channel.dart  devices.dart  events.dart
lib/source/types/: audio.dart  audiosource.dart  source.dart
lib/src/: AudioPlayer.hpp  audio-win32.cpp  audio.cpp  audio.exp  audio.hpp  audio.lib  main.dart  native_functions.dart
linux/: CMakeLists.txt  flutter_audio_desktop_plugin.cc
linux/include/com.alexmercerind/: AudioPlayer.hpp  audio.cpp
linux/include/flutter_audio_desktop/: flutter_audio_desktop_plugin.h
windows/: CMakeLists.txt  flutter_audio_desktop_plugin.cpp
windows/include/flutter_audio_desktop/: flutter_audio_desktop_plugin.h  flutter_types.hpp
